# fragenda

./: pyproject.toml  splitpages.sh
notebooks/: notebook-v1.ipynb  notebook-v2.ipynb  notebook.ipynb
notebooks/.ipynb_checkpoints/: notebook-checkpoint.ipynb
templates/: schedule_template.xlsx  tags
