[tool.poetry]
name = "fragenda"
version = "0.1.0"
description = ""
authors = ["Makcime <marlier.maxime@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
lxml = "^4.9.3"
pandas = "^2.1.0"
jupyter = "^1.0.0"
openpyxl = "^3.1.2"
pillow = "^10.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
